tests/purs/failing/TypeSynonymsOverlappingUnnamedInstance.out
Error found:
in module [33mMain[0m
at tests/purs/failing/TypeSynonymsOverlappingUnnamedInstance.purs:14:1 - 15:16 (line 14, column 1 - line 15, column 16)

  Overlapping type class instances found for
  [33m                     [0m
  [33m  Main.Convert String[0m
  [33m               String[0m
  [33m                     [0m
  The following instances were found:

    instance in module [33mMain[0m with type [33mConvert String String[0m (line 11, column 1 - line 12, column 16)
    instance in module [33mMain[0m with type [33mConvert String String[0m (line 14, column 1 - line 15, column 16)


in type class instance
[33m                     [0m
[33m  Main.Convert String[0m
[33m               String[0m
[33m                     [0m

See https://github.com/purescript/documentation/blob/master/errors/OverlappingInstances.md for more information,
or to contribute content related to this error.

